# StonyBrookCSE528Graphics

./: .gitignore  README.md
hw1/: README.md
hw1/cpp/: CMakeLists.txt
hw1/cpp/include/app/: App.h
hw1/cpp/include/shape/: GLShape.h  Pixel.h  Renderable.h
hw1/cpp/include/util/: Shader.h
hw1/cpp/src/app/: App.cpp
hw1/cpp/src/shader/: pixel.vert.glsl
hw1/cpp/src/shape/: GLShape.cpp  Pixel.cpp
hw1/py/app/: app.py
hw1/py/shape/: __init__.py  pixel.py  renderable.py
hw1/py/util/: __init__.py
hw2/: README.md
hw2/cpp/: CMakeLists.txt
hw2/cpp/include/app/: App.h  Window.h
hw2/cpp/include/shape/: Circle.h  GLShape.h  Renderable.h  Triangle.h
hw2/cpp/src/app/: App.cpp
hw2/cpp/src/glad/: glad.c
hw2/cpp/src/shader/: circle.frag.glsl  triangle.frag.glsl  triangle.vert.glsl
hw2/cpp/src/shape/: Circle.cpp  GLShape.cpp  Renderable.cpp  Triangle.cpp
hw2/py/: main.py
hw2/py/app/: app.py
hw2/py/shader/: circle.tesc.glsl  circle.tese.glsl  circle.vert.glsl  triangle.vert.glsl
hw2/py/shape/: __init__.py  circle.py  glshape.py  renderable.py  triangle.py
hw3/: .gitignore  README.md
hw3/cpp/: CMakeLists.txt
hw3/cpp/include/KHR/: khrplatform.h
hw3/cpp/include/app/: App.h
hw3/cpp/include/glad/: glad.h
hw3/cpp/include/shape/: GLShape.h  Line.h  Mesh.h  Renderable.h  Sphere.h  Tetrahedron.h
hw3/cpp/include/util/: Camera.h
hw3/cpp/src/: main.cpp
hw3/cpp/src/app/: App.cpp  Window.cpp
hw3/cpp/src/shader/: line.vert.glsl  phong.frag.glsl  sphere.tesc.glsl  sphere.tese.glsl
hw3/cpp/src/shape/: GLShape.cpp  Line.cpp  Mesh.cpp  Sphere.cpp  Tetrahedron.cpp
hw3/cpp/var/: cube.txt  dodecahedron.txt  icosahedron.txt  octahedron.txt
hw3/py/app/: app.py  window.py
hw3/py/shader/: mesh.vert.glsl  sphere.vert.glsl
hw3/py/shape/: __init__.py  glshape.py  line.py  mesh.py  renderable.py  sphere.py  tetrahedron.py
hw3/py/util/: __init__.py  camera.py  shader.py
hw3/py/var/: tetrahedron.txt
